# phoenix

./: .gitignore  README.md
.github/workflows/: ci-study-engine.yml  ci.yml
ai-service/: .env.example  README.md  pyproject.toml
ai-service/app/: config.py  llm.py  main.py  models.py
ai-service/tests/: test_api.py  test_models.py
api/: .dockerignore  .env.example  Dockerfile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
api/src/: app.ts  server.ts
api/src/config/: env.ts
api/src/data/: exams.ts
api/src/db/: migrate.ts  pool.ts  schema.ts  seed.ts
api/src/lib/: errors.ts
api/src/middleware/: audit.ts  authenticate.ts  error-handler.ts  logger.ts  not-found.ts  validate.ts
api/src/repositories/: audit.repository.ts  papers.repository.ts  users.repository.ts
api/src/routes/: admin.routes.ts  auth.routes.ts  eligibility.routes.ts  papers.routes.ts
api/src/schemas/: eligibility.schema.ts  paper.schema.ts
api/src/services/: auth.service.ts  eligibility.service.ts  papers.service.ts
api/src/types/: auth.ts  exam.ts  paper.ts
api/tests/integration/: api.test.ts
docs/: BIG_PICTURE.md
k8s/: README.md  api.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  web.yaml
study-engine/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
study-engine/src/: app.controller.ts  app.module.ts  main.ts
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/docs/: MARKET_ANALYSIS.md
web/src/: auth.ts
(+35 files in other folders)
